; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_passthru.c_msicap_access.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyve/extr_pci_passthru.c_msicap_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.passthru_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.passthru_softc*, i32)* @msicap_access to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @msicap_access(%struct.passthru_softc* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.passthru_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.passthru_softc* %0, %struct.passthru_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.passthru_softc*, %struct.passthru_softc** %4, align 8
  %8 = getelementptr inbounds %struct.passthru_softc, %struct.passthru_softc* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %36

13:                                               ; preds = %2
  %14 = load %struct.passthru_softc*, %struct.passthru_softc** %4, align 8
  %15 = getelementptr inbounds %struct.passthru_softc, %struct.passthru_softc* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @msi_caplen(i32 %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load %struct.passthru_softc*, %struct.passthru_softc** %4, align 8
  %21 = getelementptr inbounds %struct.passthru_softc, %struct.passthru_softc* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = icmp sge i32 %19, %23
  br i1 %24, label %25, label %35

25:                                               ; preds = %13
  %26 = load i32, i32* %5, align 4
  %27 = load %struct.passthru_softc*, %struct.passthru_softc** %4, align 8
  %28 = getelementptr inbounds %struct.passthru_softc, %struct.passthru_softc* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %6, align 4
  %32 = add nsw i32 %30, %31
  %33 = icmp slt i32 %26, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %25
  store i32 1, i32* %3, align 4
  br label %36

35:                                               ; preds = %25, %13
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %35, %34, %12
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @msi_caplen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
